--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.28.3",
+    "cors": "^2.8.5",
+    "dot": "^1.1.3",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
